<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	<TextView  
		android:id="@+id/tasks_title"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/tasks"
	    android:layout_alignParentTop="true"
	    />
    <ListView 
    	android:id="@id/android:list"
    	android:layout_above="@+id/add_button"
    	android:layout_below="@id/tasks_title"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    />
	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:id="@id/android:empty"
		android:text="@string/no_tasks"
		android:layout_above="@+id/add_button"
    	android:layout_below="@id/tasks_title"
    	android:gravity="center_vertical|center_horizontal"
		/>
	<Button 
		android:id="@id/add_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/add_task"
		android:layout_alignParentBottom="true"
		/>   
	<Button 
		android:id="@+id/remove_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/remove_completed_tasks"
		android:layout_alignParentBottom="true"
		android:layout_toRightOf="@id/add_button"
		/>  
 

</RelativeLayout>
