<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
    	android:orientation="vertical"
    	android:layout_width="fill_parent" 
    	android:layout_height="fill_parent" 
    	xmlns:android="http://schemas.android.com/apk/res/android">
        <TextView
        	android:id="@+id/add_task"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/task_name"
        	/>
        <EditText
	        android:id="@+id/Edit_task_name"
	        android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:inputType="text"
        	/>
        <Button 
        	android:id="@+id/button_add"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
			android:text="@string/add_task"
			/>
		<Button 
			android:id="@+id/button_cancel"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
			android:text="@string/cancel_task"
			/>	
        
    </LinearLayout>
